update AL-Commons AL-Game AL-Login
Project in java 25 and no libs.